<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7CCC8">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/det" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/initialScore"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    app:mrl_rippleOverlay="true"
                    app:mrl_rippleDuration="250">


                    <Button
                        android:id="@+id/teamAPlus3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:onClick="teamAPlus3"
                        android:text="@string/threePoints"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    app:mrl_rippleDuration="250"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/teamAPlus2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@drawable/button_background"
                        android:onClick="teamAPlus2"
                        android:text="@string/twoPoints"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>


                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    app:mrl_rippleDuration="250"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/teamAFreeThrow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@drawable/button_background"
                        android:onClick="teamAFreeThrow"
                        android:text="@string/freeThrow"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="3dp"
                android:layout_height="fill_parent"
                android:contentDescription="@string/imageMiddleDesc"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_bright" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/bkl" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/initialScore"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    app:mrl_rippleDuration="250"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/teamBPlus3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@drawable/button_background"
                        android:onClick="teamBPlus3"
                        android:text="@string/threePoints"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    app:mrl_rippleDuration="250"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/teamBPlus2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@drawable/button_background"
                        android:onClick="teamBPlus2"
                        android:text="@string/twoPoints"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    app:mrl_rippleDuration="250"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/teamBFreeThrow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@drawable/button_background"
                        android:onClick="teamBFreeThrow"
                        android:text="@string/freeThrow"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    app:mrl_rippleDuration="250"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@drawable/button_background"
                        android:onClick="resetScore"
                        android:text="@string/reset"
                        android:textColor="#ffffff" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="8dp"
                    app:mrl_rippleDuration="250"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"

                        android:background="@drawable/button_background"
                        android:onClick="result"
                        android:text="@string/result"
                        android:textColor="#ffffff" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>